[package]
name = "fnodcmanon"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
dicom-core = "0.9.0"
dicom-dictionary-std = "0.9.0"
dicom-object = "0.9.0"
log = "0.4.29"
rand = "0.9.2"
simple_logger = { version = "5.1.0", default-features = false, features = [
    "colors",
] }
